syntax = "proto3";

package goods;

option go_package = "/;goods";

service GoodsService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Update(UpdateRequest) returns (EmptyResponse);
    rpc Remove(RemoveRequest) returns (EmptyResponse);

    rpc Has(HasRequest) returns (HasResponse);
    rpc Goods(GoodsRequest) returns (GoodsResponse);
}

// Requests
message AddRequest {
    string url = 1;
    double price = 2;
}

message UpdateRequest {
    string goods_id = 1;
    string url = 2;
    string status = 3;
    NullDouble price = 4;
}

message RemoveRequest {
    string goods_id = 1;
}

message HasRequest {
    oneof arg {
        string id = 1;
        string url = 2;
    }
}

message GoodsRequest {
    oneof arg {
        string id = 1;
        string url = 2;
    }
}

// Responses
message AddResponse {
    string goods_id = 1;
}

message EmptyResponse {}

message HasResponse {
    bool ok = 1;
}

message GoodsResponse {
    Goods goods = 1;
}

message Goods {
    string id = 1;
    string url = 2;
    string status = 3;
    repeated Price prices = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}

message Price {
    double value = 1;
    int64 created_at = 2;
}

message NullDouble {
    double value = 1;
}
